<resources>
    <string name="app_name">TripTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_Weather">Weather</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="name">Name your tour</string>
    <string name="placeName">Where to go?</string>
    <string name="budget">Your Initial Budget</string>
    <string name="create">Create</string>
    <string name="add">add</string>
    <string name="todo">TODO</string>
    <string name="test_tour">Test Tour</string>
    <string name="time_tour">Time Tour</string>
    <string name="openapi">openapi</string>

</resources>