<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewTourFragment">

        <EditText
            android:id="@+id/nameTourId"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/placeTxtId"
            android:layout_width="300dp"
            android:layout_height="48dp"

            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/placeName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTourId"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/budgetTxtId"
            android:layout_width="300dp"
            android:layout_height="48dp"

            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/budget"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeTxtId"
            android:autofillHints="amount" />

        <Button
            android:id="@+id/createBtnId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budgetTxtId" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>