<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logins.LoginFragment" >

    <EditText
        android:autofillHints="emailAddress"
        android:id="@+id/emailId"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:layout_marginTop="220dp"
        android:inputType="textEmailAddress"
        android:hint="@string/prompt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:autofillHints="password"
        android:id="@+id/passwordId"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        app:passwordToggleEnabled="true"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailId" />

    <Button
        android:id="@+id/loginbtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordId" />

    <TextView
        android:id="@+id/signbtnId"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="120dp"
        android:textSize="22sp"
        android:clickable="true"
        android:gravity="center"
        android:textStyle="bold"

        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtnId"
        android:focusable="true" />

    <TextView
        android:id="@+id/errMsgTvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/signbtnId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>