<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/launcherFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tourmate.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/new_tour_action"
            app:destination="@id/newTourFragment" />
        <action
            android:id="@+id/tour_details_action"
            app:destination="@id/tourDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.tourmate.ui.weather.WeatherFragment"
        android:label="@string/menu_Weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.tourmate.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/launcherFragment"
        android:name="com.example.tourmate.LauncherFragment"
        android:label="fragment_launcher"
        tools:layout="@layout/fragment_launcher" >
        <action
            android:id="@+id/tour_list_action"
            app:destination="@id/nav_home"
            app:popUpTo="@id/launcherFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/login_action"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/launcherFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.tourmate.logins.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/login_to_home_action"
            app:destination="@id/nav_home"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/newTourFragment"
        android:name="com.example.tourmate.NewTourFragment"
        android:label="fragment_new_tour"
        tools:layout="@layout/fragment_new_tour" />
    <fragment
        android:id="@+id/tourDetailsFragment"
        android:name="com.example.tourmate.TourDetailsFragment"
        android:label="fragment_tour_details"
        tools:layout="@layout/fragment_tour_details" >
        <argument
            android:name="tourId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="null" />
    </fragment>
</navigation>